--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marie & Dan Getting Married</title>
-    <link rel="stylesheet" href="/Users/mariechapman/repos/wedding/pages/info/info.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://478.neocities.org/catalog/fonts.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,14 +45,14 @@
 
     <div id="nav">
         <ul>
-            <li><a href="/Users/mariechapman/Documents/weddingsite/index.html">Home</a></li>
-            <li><a href="./pages/info.html">Info</a></li>
-            <li> <a href="./pages/travel.html">Travel & Accomodations</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/info/info.html">Info</a></li>
+            <li> <a href="/wedding/pages/travel/travel.html">Travel & Accomodations</a></li>
             <li>
-                <a href="./pages/rsvp.html">RSVP</a>
+                <a href="./pages/rsvp/rsvp.html">RSVP</a>
             </li>
             <li>
-                <a href="./pages/registry.html">Registry</a>
+                <a href="./pages/registry/registry.html">Registry</a>
             </li>
 
         </ul>
@@ -60,38 +60,14 @@
 
 
     <div id="homebody">
-        <div class="content"> 
-            <div class="pic">
-                <img src="/Users/mariechapman/Documents/weddingsite/pics/torpedo-factory.webp">
-            </div>
-            <div class="text">
-                <h3>Venue</h3>
-                <p>
-                Both the ceremony and reception will be held at the Torpedo Factory Art Center in 
-                historic Old Town, Alexandria, overlooking the Potomac River. Founded in 1974 and housed in a 
-                former munitions factory, the Torpedo Factory provides subsidized, publicly-accessible studio space to artists from across the globe,
-                with 71 working artists currently in residence. 
-                TFAC is also home to the Alexandria Archaeology Museum and The Art League of Alexandria.
-                </p>
-
-                <h3>Schedule of Events</h3>
-                <p>6:30PM-7:00PM - Ceremony - Main Hall (ground floor).</p>
-                <p>7:00PM-8:00PM - Cocktail Hour - Overlook Room (3rd floor). Open bar with passed appetizers.</p>
-                <p>8:00PM-12:30AM - Dinner & Reception - Main Hall (ground floor). 
-                    Buffet-style dinner and dessert from local Old Blue BBQ, speeches, cake cutting, and lots of dancing!</p>
-                <br>
-                <br>
-                <br>
-                <h3>
-                Accessibility
-                </h3>
-                <p>
-                The Torpedo Factory is fully accessible via entry ramps on the ground floor of the building and an elevator to the upper levels.
-                </p>
-            </div>
-            
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque neque optio consequatur nulla adipisci, iure illum possimus maiores ea cupiditate magnam, velit, est nostrum voluptatum. Officiis omnis impedit ipsam libero.</div>
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis soluta tempore sunt aspernatur quas ipsam, laborum impedit quae ad iusto aut sequi enim ducimus placeat quia temporibus officia, expedita autem.</div>
+        <div class="content-hero">
+            <img src="./pics/hatelife.jpg">
         </div>
-     </div>
+        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt possimus, ex quas blanditiis reprehenderit reiciendis officiis quos inventore eum iste, aut fugit autem hic dolores numquam vero saepe. Totam, maxime?</div>
+        <div class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa ut voluptatum cumque esse eligendi pariatur amet aperiam! Repellendus provident est nostrum laudantium ab consequuntur sint quod nesciunt deserunt? Nobis, ut!</div>
+    </div>
 
 
     <div id="footer">
@@ -106,7 +82,7 @@
             </ul>
         </div>
         <div class="footpic">
-         <img src="/Users/mariechapman/Documents/weddingsite/pics/folkflowerfoot.png" id="footpic">
+         <img src="./pics/folkflowerfoot.png" id="footpic">
         </div>
     </div>
 </body>
