--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -45,14 +45,14 @@
 
     <div id="nav">
         <ul>
-            <li><a href="/Users/mariechapman/Documents/weddingsite/index.html">Home</a></li>
-            <li><a href="./pages/info.html">Info</a></li>
-            <li> <a href="./pages/travel.html">Travel & Accomodations</a></li>
+            <li><a href="/wedding/index.html">Home</a></li>
+            <li><a href="/wedding/pages/info/info.html">Info</a></li>
+            <li> <a href="/wedding/pages/travel/travel.html">Travel & Accomodations</a></li>
             <li>
-                <a href="./pages/rsvp.html">RSVP</a>
+                <a href="/wedding/pages/rsvp/rsvp.html">RSVP</a>
             </li>
             <li>
-                <a href="./pages/registry.html">Registry</a>
+                <a href="/wedding/pages/registry/registry.html">Registry</a>
             </li>
 
         </ul>
