--- a/template.html
+++ b/template.html
@@ -60,13 +60,41 @@
 
 
     <div id="homebody">
-        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque neque optio consequatur nulla adipisci, iure illum possimus maiores ea cupiditate magnam, velit, est nostrum voluptatum. Officiis omnis impedit ipsam libero.</div>
-        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis soluta tempore sunt aspernatur quas ipsam, laborum impedit quae ad iusto aut sequi enim ducimus placeat quia temporibus officia, expedita autem.</div>
-        <div class="content-hero">
-            <img src="./pics/hatelife.jpg">
+        <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Vel error consequatur praesentium, rerum voluptatem nihil dignissimos quasi. 
+            Ipsam quibusdam recusandae ducimus officiis ad odit quas! 
+            Molestias dolores cumque reprehenderit ab!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Illo voluptas perferendis quasi enim harum id natus ad quas officia recusandae adipisci, 
+            unde dignissimos numquam corporis quod minima soluta consequuntur aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Vel error consequatur praesentium, rerum voluptatem nihil dignissimos quasi. 
+            Ipsam quibusdam recusandae ducimus officiis ad odit quas! 
+            Molestias dolores cumque reprehenderit ab!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Illo voluptas perferendis quasi enim harum id natus ad quas officia recusandae adipisci, 
+            unde dignissimos numquam corporis quod minima soluta consequuntur aliquid.
         </div>
-        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt possimus, ex quas blanditiis reprehenderit reiciendis officiis quos inventore eum iste, aut fugit autem hic dolores numquam vero saepe. Totam, maxime?</div>
-        <div class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa ut voluptatum cumque esse eligendi pariatur amet aperiam! Repellendus provident est nostrum laudantium ab consequuntur sint quod nesciunt deserunt? Nobis, ut!</div>
+        <div class="pic">
+            <img src="https://images.pexels.com/photos/15780715/pexels-photo-15780715/free-photo-of-funny-clown-in-red-jacket.jpeg">
+        </div>
+        <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Vel error consequatur praesentium, rerum voluptatem nihil dignissimos quasi. 
+            Ipsam quibusdam recusandae ducimus officiis ad odit quas! 
+            Molestias dolores cumque reprehenderit ab!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Illo voluptas perferendis quasi enim harum id natus ad quas officia recusandae adipisci, 
+            unde dignissimos numquam corporis quod minima soluta consequuntur aliquid.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Vel error consequatur praesentium, rerum voluptatem nihil dignissimos quasi. 
+            Ipsam quibusdam recusandae ducimus officiis ad odit quas! 
+            Molestias dolores cumque reprehenderit ab!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Illo voluptas perferendis quasi enim harum id natus ad quas officia recusandae adipisci, 
+            unde dignissimos numquam corporis quod minima soluta consequuntur aliquid.
+        </div>
     </div>
 
 
