fixed nav bar alignment, removed useless styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
 
 
-    <div class="box" id="header">
+    <a id="banner" href="./index.html">
+         <div class="box" id="header">
+        
 
         <div class="motif">
             <img src="https://thumbs.dreamstime.com/b/swedish-floral-retro-pattern-traditional-folk-art-design-tulips-flowers-background-inspired-scandinavian-nordic-80800679.jpg">
@@ -39,20 +41,21 @@
         <div class="motif">
             <img src="https://thumbs.dreamstime.com/b/swedish-floral-retro-pattern-traditional-folk-art-design-tulips-flowers-background-inspired-scandinavian-nordic-80800679.jpg">
         </div>
-
+   
     </div>
+    </a>
 
 
     <div id="nav">
         <ul>
             <li><a href="/wedding/index.html">Home</a></li>
-            <li><a href="/wedding/pages/info/info.html">Info</a></li>
-            <li> <a href="/wedding/pages/travel/travel.html">Travel & Accomodations</a></li>
+            <li><a href="./pages/info/info.html">Info</a></li>
+            <li> <a href=".pages/travel/travel.html">Travel & Accomodations</a></li>
             <li>
-                <a href="/wedding/pages/rsvp/rsvp.html">RSVP</a>
+                <a href="./pages/rsvp/rsvp.html">RSVP</a>
             </li>
             <li>
-                <a href="/wedding/pages/registry/registry.html">Registry</a>
+                <a href="./pages/registry/registry.html">Registry</a>
             </li>
 
         </ul>
@@ -60,13 +63,19 @@
 
 
     <div id="homebody">
-        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque neque optio consequatur nulla adipisci, iure illum possimus maiores ea cupiditate magnam, velit, est nostrum voluptatum. Officiis omnis impedit ipsam libero.</div>
-        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis soluta tempore sunt aspernatur quas ipsam, laborum impedit quae ad iusto aut sequi enim ducimus placeat quia temporibus officia, expedita autem.</div>
-        <div class="content-hero">
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Itaque neque optio consequatur nulla adipisci, iure illum 
+            possimus maiores ea cupiditate magnam, velit, est nostrum voluptatum. 
+            Officiis omnis impedit ipsam libero.
+        </div>
+        <div class="pic">
             <img src="./pics/hatelife.jpg">
         </div>
-        <div class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt possimus, ex quas blanditiis reprehenderit reiciendis officiis quos inventore eum iste, aut fugit autem hic dolores numquam vero saepe. Totam, maxime?</div>
-        <div class="content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa ut voluptatum cumque esse eligendi pariatur amet aperiam! Repellendus provident est nostrum laudantium ab consequuntur sint quod nesciunt deserunt? Nobis, ut!</div>
+        <div class="content">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Reiciendis soluta tempore sunt aspernatur quas ipsam, laborum impedit quae ad 
+            iusto aut sequi enim ducimus placeat quia temporibus officia, expedita autem.
+        </div>
+
     </div>
 
 
