--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -45,14 +45,14 @@
 
     <div id="nav">
         <ul>
-            <li><a href="/wedding/index.html">Home</a></li>
-            <li><a href="/wedding/pages/info/info.html">Info</a></li>
-            <li> <a href="/wedding/pages/travel/travel.html">Travel & Accomodations</a></li>
+            <li><a href="/Users/mariechapman/repos/wedding/index.html">Home</a></li>
+            <li><a href="/Users/mariechapman/repos/wedding/pages/info/info.html">Info</a></li>
+            <li> <a href="/Users/mariechapman/repos/wedding/pages/travel/travel.html">Travel & Accomodations</a></li>
             <li>
-                <a href="/wedding/pages/rsvp/rsvp.html">RSVP</a>
+                <a href="/Users/mariechapman/repos/wedding/pages/rsvp/rsvp.html">RSVP</a>
             </li>
             <li>
-                <a href="/wedding/pages/registry/registry.html">Registry</a>
+                <a href="/Users/mariechapman/repos/wedding/pages/registry/registry.html">Registry</a>
             </li>
 
         </ul>
@@ -62,7 +62,7 @@
     <div id="homebody">
         <div class="content"> 
             <div class="pic">
-                <img src="/Users/mariechapman/Documents/weddingsite/pics/torpedo-factory.webp">
+                <img src="/Users/mariechapman/repos/wedding/pics/torpedo-factory.webp">
             </div>
             <div class="text">
                 <h3>Venue</h3>
@@ -106,7 +106,7 @@
             </ul>
         </div>
         <div class="footpic">
-         <img src="/Users/mariechapman/Documents/weddingsite/pics/folkflowerfoot.png" id="footpic">
+         <img src="/Users/mariechapman/repos/wedding/pics/folkflowerfoot.png" id="footpic">
         </div>
     </div>
 </body>
