--- a/pages/registry/registry.html
+++ b/pages/registry/registry.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marie & Dan Getting Married</title>
-    <link rel="stylesheet" href="/wedding/pages/registry/reg.css">
+    <link rel="stylesheet" href="/Users/mariechapman/repos/wedding/pages/registry/reg.css">
     <link href="https://478.neocities.org/catalog/fonts.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -110,7 +110,7 @@
             </ul>
         </div>
         <div class="footpic">
-         <img src="./pics/folkflowerfoot.png" id="footpic">
+         <img src="/Users/mariechapman/repos/wedding/pics/folkflowerfoot.png" id="footpic">
         </div>
     </div>
 </body>
